config/objects/CarrierInvitation__c.object
<CustomObject>
    <fields>
        <fullName>Bid_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bid Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Carrier Invitations</relationshipLabel>
        <relationshipName>CarrierInvitations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RFP__c</fullName>
        <label>RFP</label>
        <referenceTo>RFP__c</referenceTo>
        <relationshipLabel>Carrier Invitations</relationshipLabel>
        <relationshipName>CarrierInvitations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>IDK</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OUT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Carrier Invitation</label>
    <nameField>
        <label>Carrier Invitation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carrier Invitations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>